<resources>
    <string name="app_name">AireParaguay</string>
    <string name="air_quality_index">Air Quality Index</string>

    <string name="hyperlink">Air Quality and Health: <a href="https://www.who.int/es/news-room/fact-sheets/detail/ambient-(outdoor)-air-quality-and-health">Air Quality and Health</a></string>
    <string name="hyperlink2">Air Pollution: <a href="https://www.who.int/health-topics/air-pollution#tab=tab_1">Air Pollution</a></string>
    <string name="hyperlink3">Twitter: <a href="https://twitter.com/">Twitter</a></string>
    <string name="hyperlink4">AireParaguay Twitter: <a href="https://twitter.com/aireparaguay">Our Twitter</a></string>
    <string name="hyperlink5">Form: <a href="https://docs.google.com/forms/d/e/1FAIpQLSemZSWO9EgKam1lUqG5bvIpzOn5pPj9OXx02SeDfD9dBYO1qA/viewform">Form</a></string>
    <string name="linkedinhyperlink">LinkedIn: <a href="https://www.linkedin.com/in/adit-shetty-51245b208/">LinkedIn</a></string>

    <string name="bottomnavmap">Map</string>
    <string name="bottomnavdata">Latest Data</string>
    <string name="bottomnavepascale">EPA Scale</string>
    <string name="bottomnavmoreinformation">Learn More</string>


    <string name="epagood">Good</string>
    <string name="epaMod">Moderate</string>
    <string name="epaUnhSens">Unhealthy for Sensitive Groups</string>
    <string name="epaUnh">Unhealthy</string>
    <string name="epaVUnh">Very Unhealthy</string>
    <string name="epaHazardous">Hazardous</string>


    <string name="learnmoreabtaireparaguay">This app shows the results of a sensor system with laser technology, created for the measurement of air quality in the country. The sensors measure the density of particles suspended in the air, with a diameter less than or equal to 2.5 micrometers, a measure known as PM 2.5, or in Spanish, particulate matter 2.5. The measurement values \u200B\u200Bare processed in real time and according to the \"NowCast\" regulation, of the US Environmental Protection Agency, to calculate the so-called Air Quality Index (US-AQI) and obtain a reference standard measurement. The sensors are installed in various points of Asunción and nearby cities, measuring PM 2.5 values \u200B\u200Bat all times (24/7). The data is transmitted to the Internet and stored in a database in the cloud, from where it is consulted to be displayed on this web page. Unlike taking samples and measurement in the laboratory, real-time measurement allows citizens to know the quality of the air in their environment, and thus, take the necessary precautions, avoid excessive exposure and adapt their daily activities. The purpose of developing this platform was primarily to raise awareness about the impact of air quality on health. According to studies by the World Health Organization, air quality is the cause of a large number of premature deaths in the world ( See Air Quality and Health ), among which are mainly cited deaths from heart disease (25%), brain (24%) and lung (43%) ( See Air Pollution ). In this way, we hope to contribute from civil society, with the availability of an open measurement platform, complying with the highest precision standards, which allows visualizing the air quality indices in the environment, and promoting citizen participation and awareness. with the environment. The results of the measurements are also published automatically and from time to time on social networks, and can be consulted using Twitter ( See Twitter ) , under the @aireparaguay ( See Aire Paraguay Twitter ) account . Through this account, information and articles related to Air Quality in Paraguay and in the world are published, as well as the results of research carried out by the project team. All sensors in operation have an international (Swiss) calibration certificate, the long-life factory warranty for this calibration, a European certification (MCERTS), and meet the highest manufacturing quality standards. The creators of the project are engineers trained abroad, and with a proven track record in creating industrial products in Europe and the United States. Do you have suggestions or feedback? Interested in potentially setting up a sensor in an area you know? Please fill out this form ( See Form ) </string>


    <string name="hyperlinkonefortranslation">Air Quality and Health</string>
    <string name="hyperlinktwofortranslation">Air Pollution</string>
    <string name="hyperlinkthreefortranslation">Twitter</string>
    <string name="hyperlinkfourfortranslation">AireParaguay Twitter</string>
    <string name="hyperlinkfivefortranslation">Form</string>
    <string name="bottomnavaboutme">About Me</string>



    <string name="concernsModerate">People who may be exceptionally sensitive to particulate contamination.</string>
    <string name="concernsNobody">Concerns: Nobody!</string>
    <string name="aboutmetext">Hi! My name is Adit Shetty, and I am a senior at South Brunswick High School, New Jersey, USA. I am an aspiring computer scientist, but I am also interested in pursuing a CS career integrated with environmental connections. Just as this app helps raise awareness of air quality within Paraguay, I would like to continue my journey on helping people and our planet. Whether it be working more with air quality, urban development (smart cities), climate change, satellites, and much more, I am so excited to begin working with computer science to truly benefit out world. Please reach out at aditshettyAP@gmail.com!</string>

</resources>