<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/map_tab"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bottomnavmap" />


    <item
        android:id="@+id/data_tab"
        android:icon="@drawable/ic_baseline_table_rows_24"
        android:title="@string/bottomnavdata" />

    <item
        android:id="@+id/learn_epa_tab"
        android:icon="@drawable/ic_baseline_school_24"
        android:title="@string/bottomnavepascale" />


    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/ic_baseline_read_more_24"
        android:title="@string/bottomnavmoreinformation" />

    <item
        android:id="@+id/about_me_tab"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottomnavaboutme" />





</menu>